# nanobot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/channel-plugin-echo/: README.md  pyproject.toml
examples/channel-plugin-echo/src/nanobot_channel_echo/: __init__.py  echo_channel.py  factory.py
examples/provider-plugin-bailian/: README.md  pyproject.toml
examples/provider-plugin-bailian/src/nanobot_plugin_bailian/: __init__.py  provider_factory.py  provider_spec.py
nanobot/agent/: context.py  loop.py  subagent.py
nanobot/agent/tools/: code_search.py  opencode.py
nanobot/channels/: channel_plugins.py  manager.py  telegram.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/gateway/: __init__.py  route_manager.py  self_update.py
nanobot/providers/: base.py  litellm_provider.py  provider_plugins.py  registry.py
nanobot/skills/: README.md
nanobot/skills/opencode-workflow/: SKILL.md
nanobot/skills/self-evolution-git/: SKILL.md
nanobot/skills/skill-creator/: SKILL.md
nanobot/skills/skill-creator/scripts/: init_skill.py
nanobot/templates/: SOUL.md  TOOLS.md
tests/: test_channel_plugins.py  test_consolidate_offset.py  test_find_code_tool.py  test_matrix_channel.py  test_message_tool_suppress.py  test_opencode_tool.py  test_provider_plugins.py  test_route_manager.py  test_self_update_manager.py
