[project]
name = "nanobot-channel-webhook-plugin"
version = "0.1.0"
description = "Example nanobot channel plugin (webhook integration)"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.4",
]

[project.entry-points."nanobot.channel_factories"]
webhook-dev = "nanobot_channel_echo.factory:create_channel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_channel_echo"]
