[project]
name = "nanobot-provider-bailian-plugin"
version = "0.1.0"
description = "Example nanobot provider plugin for Alibaba Cloud BaiLian (DashScope)"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.4",
]

[project.entry-points."nanobot.provider_specs"]
aliyun-bailian = "nanobot_plugin_bailian.provider_spec:get_provider_specs"

[project.entry-points."nanobot.provider_factories"]
aliyun-bailian = "nanobot_plugin_bailian.provider_factory:create_provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_plugin_bailian"]
